syntax = "proto3";
import "tagger/tagger.proto";
option go_package = "github.com/elnosh/gonuts/cashurpc";

import "proofs.proto";


message TokenV3 {
  repeated BaseToken token = 1;
  string unit = 2;
  string memo = 3;
}

message BaseToken {
  string mint = 1;
  Proofs proofs = 2;
}